--- a/public/css/slick/slick.css
+++ b/public/css/slick/slick.css
@@ -6,12 +6,13 @@
 .caption {
   position: absolute;
   text-align: center;
-  bottom: 50px;
+  bottom: 0px;
   padding: 15px;
-  width: 100%;
+  width: 95%;
   min-height: 38px;
-  background-color: rgba(255, 255, 255, 0.5);
+  background-color: rgba(0, 0, 0, 0.59);
   z-index: 50;
+  color:white;
   transform: translate3d(0,0,0);
 }
 
